clusters/hybrid01/config/karma/karma-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: karma
  labels:
    pod-security.kubernetes.io/enforce: privileged
    goldilocks.fairwinds.com/enabled: "true"
