clusters/hybrid01/config/karma/karma-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karma
  namespace: karma
  labels:
    app: karma
spec:
  replicas: 1
  automountServiceAccountToken: false
  securityContext: 
    runAsNonRoot: true
    runAsUser: 1000
    runAsGroup: 1000
    fsGroup: 1000
    allowPrivilegeEscalation: false
    readOnlyRootFilesystem: true
  selector:
    matchLabels:
      app: karma
  template:
    metadata:
      labels:
        app: karma
    spec:
      containers:
      - name: karma
        image: ghcr.io/prymitive/karma:v0.133
        securityContext: 
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 1000
          fsGroup: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        resources:
          requests:
            cpu: 15m
            memory: 25M
          limits:
            memory: 35M
        ports:
        - name: karma
          protocol: TCP
          containerPort: 8080
